Added project files

--- a/skin-sense-webapp/css/skin.css
+++ b/skin-sense-webapp/css/skin.css
@@ -2,7 +2,7 @@
 
 
 .bground-color {
-	background-color: grey; /* #1B2A49;  #1B2A49; #F8F8F8;  rgb(248,248,248) */
+	background-color: white; /* #1B2A49;  #1B2A49; #F8F8F8;  rgb(248,248,248) */
 }
 
 .text-color {
